[gd_scene load_steps=9 format=3 uid="uid://dnfu85x4yhumf"]

[ext_resource type="Script" path="res://user_interface/main_canvas/menu_manager/menu_manager.gd" id="1_6gycy"]
[ext_resource type="PackedScene" uid="uid://lieb5rtvgudj" path="res://user_interface/main_canvas/team_info_menu_group/team_info_menu_group.tscn" id="2_kfbnn"]
[ext_resource type="PackedScene" uid="uid://c337bocqumywo" path="res://user_interface/main_canvas/pause_menu/pause_menu.tscn" id="2_lhenv"]
[ext_resource type="PackedScene" uid="uid://3c5xxkbdnexp" path="res://user_interface/choose_preset_menu/choose_preset_menu.tscn" id="3_ilmyu"]
[ext_resource type="PackedScene" uid="uid://b4bsddkt71vf8" path="res://user_interface/main_canvas/upgrade_stats_menu/upgrade_stats_menu.tscn" id="4_mjqvt"]
[ext_resource type="PackedScene" uid="uid://764f7ksfh0sl" path="res://user_interface/main_canvas/upgrade_stree_menu/upgrade_stree_menu.tscn" id="5_n4jrg"]
[ext_resource type="PackedScene" uid="uid://b1oov8mcofu10" path="res://user_interface/main_canvas/select_expedition_menu/select_expedition_menu.tscn" id="7_gu4ak"]
[ext_resource type="PackedScene" uid="uid://dypnmjgp84c2q" path="res://user_interface/main_canvas/credits_menu/credits_menu.tscn" id="8_og038"]

[node name="MenuManager" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_6gycy")
dev_console_enabled = false

[node name="PauseMenu" parent="." instance=ExtResource("2_lhenv")]
visible = false
layout_mode = 1

[node name="TeamInfoMenuGroup" parent="." instance=ExtResource("2_kfbnn")]
visible = false
layout_mode = 1

[node name="PresetChoiceWindow" parent="." instance=ExtResource("3_ilmyu")]
visible = false
layout_mode = 1

[node name="UpgradeStatsMenu" parent="." instance=ExtResource("4_mjqvt")]
visible = false
layout_mode = 1

[node name="UpgradeStreeMenu" parent="." instance=ExtResource("5_n4jrg")]
visible = false
layout_mode = 1

[node name="SelectExpeditionMenu" parent="." instance=ExtResource("7_gu4ak")]
visible = false
layout_mode = 1

[node name="CreditsMenu" parent="." instance=ExtResource("8_og038")]
visible = false
layout_mode = 1

[node name="HBox_ScreenButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -125.0
offset_bottom = 31.0
grow_horizontal = 0

[node name="team_menu" type="Button" parent="HBox_ScreenButtons"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 13
text = "Team Menu"

[node name="spacer" type="Control" parent="HBox_ScreenButtons"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="open_pause_menu" type="Button" parent="HBox_ScreenButtons"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 13
text = "Pause"

[connection signal="pressed" from="HBox_ScreenButtons/team_menu" to="." method="_on_team_menu_pressed"]
[connection signal="pressed" from="HBox_ScreenButtons/open_pause_menu" to="." method="_on_open_pause_menu_pressed"]
